# med_code_search

./: .gitignore  MANIFEST.in  README.md  icpc_3.ipynb  pyproject.toml  requirements.txt  setup.cfg
med_code_search/: main.py
med_code_search/data/: icpc_3_pt.csv
med_code_search/pages/: classifier.py  code_search.py  feedback.py  multi_coding.py  openai_search.py  search_v4_test.py  update_search.py
