[metadata]
name = med_code_search
version = 0.0.1
author = Vinicius Anjos de Almeida
author_email = almeida.va93@gmail.com
description = ICPC2 and ICD10 search engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/almeidava93
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True